Changelog
=========

1.2 (unreleased)
----------------

- Add missing translations for contact-info view title
  [laulaz]


1.1 (2012-11-12)
----------------

- Nothing changed yet.


1.0 (2012-11-09)
----------------

- Package created using zopeskel
  []